--- a/src/app/features/admin-layout/content-management/content-management.component.html
+++ b/src/app/features/admin-layout/content-management/content-management.component.html
@@ -307,6 +307,7 @@
                     [logoUrl]="inputFields.logoUrl"
                     [colors]="colors" 
                     [disableAPI]="true"
+                    [division]="getDivision()"
                     [title]="getDivisionName()" class="w-full h-full hidden min-[1200px]:block"></app-queue-display>
                     <div class="w-full h-full min-[1200px]:hidden flex bg-black items-center justify-center text-white font-thin text-lg">
                         This resolution is not supported for preview
