--- a/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.html
+++ b/src/app/features/kiosk-layout/kiosk-forms/kiosk-forms.component.html
@@ -117,7 +117,7 @@
       <button (click)="goBack()" class="gap-2.5 self-stretch px-28 py-1.5 my-auto rounded-3xl bg-slate-800 min-h-[70px] min-w-[240px] shadow-[9px_9px_9px_rgba(0,0,0,0.25)] w-[325px] max-md:px-5">
         Back
       </button>
-      <button (click)="confirmChecklist()" class="gap-2.5 self-stretch px-24 py-1.5 my-auto bg-green-700 rounded-3xl min-h-[70px] min-w-[240px] shadow-[9px_9px_9px_rgba(0,0,0,0.25)] w-[325px] max-md:px-5">
+      <button (click)="submitForm()" class="gap-2.5 self-stretch px-24 py-1.5 my-auto bg-green-700 rounded-3xl min-h-[70px] min-w-[240px] shadow-[9px_9px_9px_rgba(0,0,0,0.25)] w-[325px] max-md:px-5">
         Confirm
       </button>
     </div>
