--- a/src/app/features/queueing-layout/queue-display/queue-display.component.css
+++ b/src/app/features/queueing-layout/queue-display/queue-display.component.css
@@ -6,10 +6,42 @@
   line-height: 1.2;
 }
 
+@container queue-main (max-width:400px){
+  .queue-item-icon,
+  .weather-icon{
+    width: 0.5rem;
+    height: 0.5rem;
+  }
+
+  .right-side{
+    padding:0.5rem;
+  }
+
+}
+@container queue-main (min-width:400px) and (max-width:2000px){
+  .queue-item-icon,
+  .weather-icon{
+    width: 0.8rem;
+    height: 0.8rem;
+  }
+}
+
 @container queue-main (max-width: 600px){
   .main-container * {
     line-height: 1;
   }
+  
+
+  .loader{
+    width: 8rem;
+    height: 8rem;
+  }
+
+  .waiting{
+    width: 3rem;
+    height: 3rem;
+  }
+
 
   .banner-logo{
     width: 3rem;
@@ -17,29 +49,31 @@
   }
 
 
-  .queue-item-container,.time-container-inner,.currency-header,.division-banner{
+
+  .main-content,.queue-item-container,.time-container-inner,.currency-header,.division-banner{
     padding:0.2rem;
   }
-  .main-content,.queue-item-container{
-    padding: 0.3rem;
-  }
-
   .left-side{
     gap:0.4rem;
   }
 
 
-  .queue-title, .queue-item-ticket,
+  .queue-item-ticket,
   .currency-info,.currency-value,.weather-am-pm,.weather-temperature,
-  .timezone-container, .timezone-text,
+
   .serving-item-header,.serving-item-label,.currency-container-inner,.currency-info {
     font-size: 0.3rem;
 
   } 
 
-  .serving-title,.banner-title,
+  .timezone-container,   .timezone-text{
+    font-size: 0.4rem;
+  }
+
+  .queue-title,.serving-title,.banner-title,
   .serving-item-header, .current-time-container,.serving-item-content-text{
     font-size: 0.6rem;
+    line-height: 1;
 
   }
   .weather-left-container,   .currency-label,
@@ -51,10 +85,7 @@
     padding: 0.2rem;
     gap:0.2rem;
   }
-
   
-
-
   .announcement-banner{
     height: 0.7rem;
   }
@@ -75,11 +106,7 @@
     padding:0.3rem;
   }
   
-  .queue-item-icon,
-  .weather-icon{
-    width: 1rem;
-    height: 1rem;
-  }
+
   .currency-icon-container{
     width: 0.6rem;
     height: 0.6rem;
@@ -87,13 +114,34 @@
 
 }
 
-@container queue-main (min-width: 500px){
+@container queue-main (min-width: 500px) and (max-width:2000px){
   .currency-value,.serving-item-content-text,.current-time-container, .currency-value, .weather-left-container, .queue-item-ticket{
-    font-size: 0.8rem;
+    font-size: 0.9em;
   }
+  .timezone-container,   .timezone-text{
+    font-size: 0.6rem;
+  }
+
 }
 
 @container queue-main (min-width: 600px) and (max-width: 2000px) {
+
+  .main-content *{
+    line-height: 1;
+  }
+
+  
+  .loader{
+    width: 12rem;
+    height: 12rem;
+  }
+
+  .waiting{
+    width: 8rem;
+    height: 8rem;
+  }
+
+
   .banner-title{
     font-size: 1.6rem;
   }
@@ -112,17 +160,36 @@
   }
   .queue-container-inner{
     gap:0.2rem;
-    padding:0.8rem;
+    padding:1.2rem;
   }
 
   .weather-left-container,   .currency-label,
-  .announcement-text,.banner-label{
+  .banner-label{
      font-size: 1.5rem;
+   }
+   .announcement-text{
+    font-size: 1rem;
+   }
+
+   .serving-item-content-text{
+    font-size: 1.2rem;
    }
 
    .queue-item-icon{
     width: 1.8rem;
     height: 1.8rem;
+  }
+
+ .timezone-text,.timezone-container{
+    font-size: 1rem;
+  }
+
+  .current-time-container{
+    font-size: 1.7rem;
+  }
+
+  .current-time-milli{
+    font-size: 0.8rem;
   }
  
 }
@@ -145,9 +212,10 @@
   }
   .queue-container-inner{
     gap:0.3rem;
-    padding:1.5em;
+    padding:1.5rem;
   }
   
+ 
 }
 @container queue-main (min-width: 3000px){
   .banner-title{
@@ -175,6 +243,11 @@
   }
   .queue-list-container{
     gap: 2rem;
+  }
+
+  .waiting{
+    width: 30rem;
+    height: 30rem;
   }
 }
 
