--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
             <img src="assets/logo/vsu.png" alt="Right Image" class="w-14 h-14 object-cover rounded-full">
             <h2 class="text-2xl font-medium text-[#283c1c]">
                 <span class="font-normal">Welcome </span>
-                <span>Anton Caesar Cabais!</span>
+                <span>{{getUserName()}}!</span>
                 <span> 👋 </span>
             </h2>
         </div>
